Migrate logos to svgs and fix icon scaling Updated gradients to improve contrast

--- a/src/elements/pages/dev/game/rvt-user-games.scss
+++ b/src/elements/pages/dev/game/rvt-user-games.scss
@@ -28,10 +28,6 @@
 			$dash-array: (5, 11),
 			$dash-offset: 2px
 		);
-
-		#create-game-content {
-			background-color: rgba(255, 255, 255, 0.02);
-		}
 	}
 }
 
@@ -126,40 +122,9 @@
 								$dash-array: (5, 11),
 								$dash-offset: 2px
 							);
-
-							#create-game-content {
-								background-color: rgba(255, 255, 255, 0.02);
-							}
 						}
 
 						@include common.active-state();
-
-						#create-game-content {
-							position: relative;
-							display: flex;
-							flex-direction: column;
-							align-items: center;
-							justify-content: center;
-							z-index: 1;
-
-							padding: 16px;
-							box-sizing: border-box;
-							width: 100%;
-							height: 100%;
-							border-radius: $border-radius - $border-width;
-							text-align: center;
-
-							font-size: 20px;
-							font-weight: 600;
-							color: rgba(255, 255, 255, 0.8);
-							cursor: pointer;
-
-							lazy-img {
-								width: 140px;
-								height: 140px;
-								margin: -25px 15px 30px 15px;
-							}
-						}
 					}
 
 					#non-dev-group-selected {
